"Refactor question repositories and implement interface model"
The commit introduces a generic repository interface in place of the specific 'DeductiveQuestionRepository'. The 'DeductiveQuestion' and 'InductiveQuestion' classes have been adjusted to implement a 'Model' interface. The 'DeductiveQuestionRepositoryImpl' and 'InductiveQuestionRepositoryImpl' classes have been adjusted to implement the new generic 'Repository' interface. Observations, conclusions, and options have been standardized across the question types. Minor changes to MySQL setup and UI components were also made.